[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.9", features = ["ws", "headers"]}
futures = "0.3.26"
futures-util = "0.3.26"
tokio = {version = "1.26.0", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
